Ui, bootstrap4 and more
Signed-off-by: Robin Wenzel <info@robin-wenzel.de>

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,19 @@
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    animation: spin 2s linear infinite;
+    display: none;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+
 .center {
   margin: auto;
   width: 60%;
