--- a/templates/search.html
+++ b/templates/search.html
@@ -1,16 +1,15 @@
 {% if results %}
-<table class="table table-sm">
-  <thead>
-    <tr>
-      <th scope="col">Book</th>
-    </tr>
-  </thead>
-  <tbody>
+<div class="card-columns">
   {% for book in results %}
-    <tr>
-      <td>{{ book._source.filename }}</td>
-    </tr>
+  <div class="card border-primary" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+      <p class="card-text">{{ book._source.filename }} </p>
+      <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
   {% endfor %}
-  </tbody>
-</table>
+</div>
 {% endif %}
