incl. path link as alert box
until i have something nicer

Signed-off-by: Robin Wenzel <info@robin-wenzel.de>

--- a/templates/search_alt.html
+++ b/templates/search_alt.html
@@ -10,7 +10,7 @@
     {% for book in results %}
     <tr>
         <th scope="row"></th>
-        <td>{{ book._source.filename }}</td>
+        <td>{{ book._source.filename }} [<a href="#" onclick='alert("{{ book._source.filepath }}");'>Path</a>]</td>
     </tr>
     {% endfor %}
     </tbody>
